Updated the truncate method to use trim().isEmpty() for Java 8 compatibility.